--- a/pom.xml
+++ b/pom.xml
@@ -7,10 +7,12 @@
     <groupId>com.whisperinggarden</groupId>
     <artifactId>liquibase-auto-rollback</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>jar</packaging>
+
     <name>liquibase-auto-rollback</name>
     <description>A helper library that automatically rolls back Liquibase changesets.</description>
-    <packaging>jar</packaging>
     <url>https://github.com/sshushkevich/liquibase-auto-rollback</url>
+
     <licenses>
         <license>
             <name>MIT License</name>
@@ -18,6 +20,7 @@
             <distribution>repo</distribution>
         </license>
     </licenses>
+
     <developers>
         <developer>
             <id>sshushkevich</id>
@@ -29,6 +32,7 @@
             </roles>
         </developer>
     </developers>
+
     <scm>
         <connection>scm:git:git://github.com/sshushkevich/liquibase-auto-rollback.git</connection>
         <developerConnection>scm:git:ssh://github.com/sshushkevich/liquibase-auto-rollback.git</developerConnection>
@@ -81,6 +85,15 @@
     <build>
         <plugins>
             <plugin>
+                <groupId>org.sonatype.central</groupId>
+                <artifactId>central-publishing-maven-plugin</artifactId>
+                <version>0.7.0</version>
+                <extensions>true</extensions>
+                <configuration>
+                    <publishingServerId>central</publishingServerId>
+                </configuration>
+            </plugin>
+            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.13.0</version>
@@ -89,6 +102,32 @@
                     <target>${java.version}</target>
                     <encoding>${project.build.sourceEncoding}</encoding>
                 </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-source-plugin</artifactId>
+                <version>3.2.1</version>
+                <executions>
+                    <execution>
+                        <id>attach-sources</id>
+                        <goals>
+                            <goal>jar</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <version>3.5.0</version>
+                <executions>
+                    <execution>
+                        <id>attach-javadocs</id>
+                        <goals>
+                            <goal>jar</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
 
